<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AboutActivity">

        <TextView
            android:id="@+id/tv_about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_about"
            android:textSize="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="69dp" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_nama"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="159dp" />

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_nim"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="188dp" />

        <TextView
            android:id="@+id/tv_jurusan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_jurusan"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="216dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="119dp"
            android:layout_height="127dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/me"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="379dp" />

        <TextView
            android:id="@+id/tv_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/about_me"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="328dp" />

    </LinearLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#313131"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</android.support.constraint.ConstraintLayout>